CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(bluetooth.default C)

SET(SRCS
./src/bt-hal-bluetooth.c
./src/bt-hal-adapter-dbus-handler.c
./src/bt-hal-dbus-common-utils.c
./src/bt-hal-event-receiver.c
./src/bt-hal-utils.c
)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION_MAJOR 1)
SET(VERSION ${VERSION_MAJOR}.0.0)
SET(APP_SYSCONFDIR /opt/var/lib/bluetooth)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/hardware/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc/)

SET(PKG_MODULES
        dbus-glib-1
	glib-2.0
        gio-2.0
	syspopup-caller
)

#INCLUDE(FindPkgConfig)
#pkg_check_modules(service_pkgs REQUIRED syspoup-caller)

FIND_PROGRAM(MARSHALTOOL NAMES glib-genmarshal)
EXEC_PROGRAM("${MARSHALTOOL}" ARGS "--prefix=marshal ${CMAKE_CURRENT_SOURCE_DIR}/marshal.list --header > ${CMAKE_CURRENT_SOURCE_DIR}/include/marshal.h")
EXEC_PROGRAM("${MARSHALTOOL}" ARGS "--prefix=marshal ${CMAKE_CURRENT_SOURCE_DIR}/marshal.list --body > ${CMAKE_CURRENT_SOURCE_DIR}/marshal.c")

FIND_PROGRAM(DBUS_BINDING_TOOL NAMES dbus-binding-tool)


#Otiginal
FOREACH(flag ${packages_CFLAGS})
        SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -Wall")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g ")
#FOREACH(flag ${service_pkgs_CFLAGS})
#        SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag} -Wall")
#ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

FIND_PROGRAM(UNAME NAMES uname)

FIND_PROGRAM(DBUS_BINDING_TOOL NAMES dbus-binding-tool)

EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
        ADD_DEFINITIONS("-DTARGET")
        MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DAPP_SYSCONFDIR=\"${APP_SYSCONFDIR}\"")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -ldlog)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lpthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -ldl)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lgio-2.0)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lglib-2.0)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -ldbus-1)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lgobject-2.0)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lsyspopup_caller)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lbundle)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib COMPONENT RuntimeLibraries)
